# Legalion

./: LICENSE  README.md  next.config.js  package-lock.json  package.json  pyproject.toml  tmp_transform.py  vercel.json
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: page.tsx
app/results/: page.tsx
app/signin/: page.tsx
app/signup/: page.tsx
app/upload/: page.tsx
backend/: Dockerfile  main.py  notebook_module.py  requirements.txt
backend/__pycache__/: notebook_module.cpython-312.pyc.1491805022864
backend/data/084cea3f-a985-4e4b-b386-4d25f15320fa/: ambiguity_analysis_strict.json  clauses.json  final_comprehensive_analysis.json  full_text.txt
backend/data/2651783a-5054-4cec-9478-a51ea3c5c481/: ambiguity_analysis_strict.json  clauses.json  final_comprehensive_analysis.json  full_text.txt
backend/data/b6b6d46e-6876-42d2-8094-ebe814d9b8ed/: ambiguity_analysis_strict.json  clauses.json  final_comprehensive_analysis.json  full_text.txt
backend/data/c3640799-55d5-463b-8585-31dcfca06cbb/: clauses.json
backend/data/c95f4d63-1684-496e-9b10-7f986b6b8518/: ambiguity_analysis_strict.json  clauses.json  full_text.txt
backend/data/d93ee98b-5945-4744-a167-87dbdb7c6c1f/: ambiguity_analysis_strict.json  clauses.json  final_comprehensive_analysis.json  full_text.txt
backend/fine-tuned-legal-minilm/: README.md  config.json  config_sentence_transformers.json
components/: knowledge-graph.tsx  navigation.tsx  theme-toggle.tsx
lib/: api.ts  session-uploads.ts
(+1 files in other folders)
