[project]
name = "legalion-web-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "google-generativeai>=0.8.6",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "reportlab>=4.4.10",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.44.0",
]
